fix: misaligned back icon on megamenu in mobile mode

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -593,7 +593,7 @@ header .mobile-menu li a {
   text-align: left;
   text-transform: uppercase;
   margin-bottom: 0;
-  line-height: 20px;
+  line-height: 30px;
   color: inherit;
   text-decoration: none;
 }
